BXEGS-436 fix for Emergency Contact errors displaying inappropiately; git rid of scrollbar in modal

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -426,7 +426,7 @@ input.hasMultiCalendarPicker.pi-date-input::-ms-clear {
 
 .pi-modal-divider span {
     border-bottom: 1px solid #BEC5CB;
-    width: 895px;
+    width: 894px;
     float: left;
     margin-top: 1em;
     margin-bottom: 1px;
